# so-arm101-ros2-pkgs

./: .gitignore  TODO.md
scservo_sdk/: CMakeLists.txt  package.xml
soarm101_bringup/: package.xml  setup.cfg  setup.py
soarm101_bringup/launch/: bringup.launch.py
soarm101_bringup/urdf/: full.xacro
soarm101_controller/: CMakeLists.txt  package.xml
soarm101_description/: CMakeLists.txt  package.xml
soarm101_description/urdf/: soarm101.urdf.xacro  soarm101.xacro  soarm101_for_moveit.urdf.xacro
soarm101_hardware/: CMakeLists.txt  package.xml  soarm101_hardware.xml
soarm101_hardware/include/soarm101_hardware/: soarm101_hardware.hpp
soarm101_hardware/src/: soarm101_hardware.cpp
soarm101_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
soarm101_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so101.urdf.ros2_control.xacro  so101.urdf.srdf  so101.urdf.urdf.xacro
soarm101_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
soarm101_nodes/: CMakeLists.txt  package.xml
soarm101_nodes/src/: gripper_goal_sender.cpp  joint_goal_sender.cpp
soarm101_ros2_control/: CMakeLists.txt  package.xml
soarm101_ros2_control/config/: motor_calibration.yaml  real_controllers.yaml  sim_controllers.yaml
soarm101_ros2_control/urdf/: ros2_control_real.xacro  ros2_control_sim.xacro
